fix: always reserve space for dirty icon to prevent tabs shift

--- a/src/styles/Extn-TabBar.less
+++ b/src/styles/Extn-TabBar.less
@@ -80,7 +80,7 @@
 .tab {
     display: inline-flex;
     align-items: center;
-    padding: 0 0.5rem 0 0.85rem;
+    padding: 0 0.5rem 0 0.6rem;
     height: 100%;
     background-color: #f1f1f1;
     border-right: 1px solid rgba(0, 0, 0, 0.05);
@@ -108,6 +108,7 @@
     display: flex;
     align-items: center;
     margin-bottom: -2px;
+    margin-left: 0.7rem;
 }
 
 .tab-name {
@@ -191,13 +192,17 @@
     background-color: #666;
 }
 
-.tab.dirty::before {
+.tab::before {
     content: "•";
-    color: #888;
+    color: transparent;
     font-size: 1.6rem;
     position: absolute;
-    left: 0.75rem;
+    left: 0.4rem;
     top: 0.25rem;
+}
+
+.tab.dirty::before {
+    color: #888;
 }
 
 .dark .tab.dirty::before {
@@ -205,7 +210,7 @@
 }
 
 .tab.dirty .tab-icon {
-    margin-left: 0.8rem;
+    margin-left: 0.7rem;
 }
 
 .tab-close {
